# generate_ror_files

./: README.md  README.rst  minimal_test.csv  pyproject.toml  sample_generate_ror.config
generate_ror_files/: aux.py
tests/: test_generate_ror_files.py
